--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Mi Pagina WEL</title>
     </head>
     <body>
-        
+        <header>
+            <h1>HELLO WORLD</h1>
+        </header>
     </body>
 </html>
