--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mi Pagina WEL</title>
+        <title>Pagina 1</title>
     </head>
     <body>
         <header>
