info extra i icono

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Pagina 1</title>
+        <meta name="author" content="Narcís Matas">
+        <meta name="description" content="Mi primera web">
+        <link href="Imatges/Fw_IFyaWYAcR3d_.jpg">
     </head>
     <body>
         <header>
