--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Pagina 1</title>
         <meta name="author" content="Narcís Matas">
         <meta name="description" content="Mi primera web">
-        <link href="Imatges/Fw_IFyaWYAcR3d_.jpg">
+        <link href="Imatges/Fw_IFyaWYAcR3d_.jpg" rel="icon">
     </head>
     <body>
         <header>
