--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     </head>
     <body>
         <header>
-            <h1>HELLO WORLD</h1>
+            <h1>Hello world!</h1>
+            <h2>Mi primera página en HTML</h2>
+            <h3>Vamos a aprender muchas cosas</h3>
+            <nav>
+                <ul>
+                    <li><a target="_blank" href="http://students.itb.cat">Opcion1</a></li>
+                    <li><a target="_blank" href="https://www.itb.cat/"></a>Opcion2</li>
+                    <li><a target="_blank" href="http://formula1.com">Opcion3</a></li>
+                    <li><a href="https://www.google.com/?safe=active&ssui=on">Opcion4</a></li>
+                </ul>
+            </nav>
         </header>
-        <h2>We are here</h2>
-        <h4>Empezamos a trabajar HTML</h4>
     </body>
 </html>
