--- a/index.html
+++ b/index.html
@@ -14,11 +14,77 @@
             <nav>
                 <ul>
                     <li><a target="_blank" href="http://students.itb.cat">Opcion1</a></li>
-                    <li><a target="_blank" href="https://www.itb.cat/"></a>Opcion2</li>
+                    <li><a target="_blank" href="http://www.itb.cat">Opcion2</a></li>
                     <li><a target="_blank" href="http://formula1.com">Opcion3</a></li>
-                    <li><a href="https://www.google.com/?safe=active&ssui=on">Opcion4</a></li>
+                    <li><a target="_blank" href="https://www.google.com/?safe=active&ssui=on">Opcion4</a></li>
+                    <li><a href="Ej04.html">Ej04</a></li>
                 </ul>
             </nav>
         </header>
+        
+        <h2>Main</h2>
+        <section>
+            <h1>Section 1</h1>
+            <article>
+                <h3>Article 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+            </article>
+            <article>
+                <h3>Article 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+            </article>
+        </section>
+        <section>
+            <h1>Section 2</h1>
+            <article>
+                <h3>Article 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <h3>Article 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <h3>Article 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+            </article>
+        </section>
+        <aside>
+            <article>
+                <h2>Publicidad 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <a href="http://www.youtube.com">Youtube</a>
+            </article>
+            <article>
+                <h2>Publicidad 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec nisl metus. In in augue fringilla, vehicula urna eu, 
+                commodo ex. Morbi sit amet augue id mi pharetra ultricies quis in purus. Donec sit amet tempus leo. Duis ornare ligula at leo 
+                mattis convallis. Maecenas dolor elit, laoreet nec suscipit vitae, interdum ac eros. In blandit vel nunc ut aliquam.</p>
+                <a href="http://www.drive.google.com">Drive</a>
+            </article>
+        </aside>
+        <footer>
+            <h1>Footer</h1>
+            <h2>Politica de privacidad</h2>
+            <h2>Mapa de la web</h2>
+            <h2>Contacto</h2>
+            <p>Institut tecnològic de Barcelona<br>info@itb.cat<br>c/ aiguablava 121</p>
+        </footer>
     </body>
 </html>
