--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a target="_blank" href="http://formula1.com">Opcion3</a></li>
                     <li><a target="_blank" href="https://www.google.com/?safe=active&ssui=on">Opcion4</a></li>
                     <li><a href="Ej04.html">Ej04</a></li>
+                    <li><a href="Ej05.html">Ej05</a></li>
                 </ul>
             </nav>
         </header>
