--- a/Ej05.html
+++ b/Ej05.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <body>
-    <table>
-        <h2>Analisis de ventas actuales</h2>
-        <caption>Analisis de ventas anuales</caption>
-        <tr>
-            <td>a</td>
-            <td>b</td>
+    <table border="1">
+        <h2>Analisis de ventas</h2>
+
+        <head>Analisis de ventas anuales</head>
+        <tr align="center">
+            <td rowspan="2" ><b>AÑO</b></td>
+            <td colspan="4"><b>Expansión de ventas</b></td>
+        </tr>
+        <tr align="center">
+            <td>Producto A</td>
+            <td>Producto B</td>
+            <td>Producto C</td>
+            <td>Producto D</td>
+        </tr>
+        <tr align="center">
+            <td>N-3</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr align="center">
+            <td>N-2</td>
+            <td>3</td>
+            <td>5</td>
+            <td>8</td>
+            <td>4</td>
+        </tr>
+        <tr align="center">
+            <td>N-1</td>
+            <td>4</td>
+            <td>4</td>
+            <td>7</td>
+            <td>3</td>
+        </tr>
+        <tr align="center">
+            <td>N</td>
+            <td>5</td>
+            <td>7</td>
+            <td>6</td>
+            <td>2</td>
+        </tr>
+        <tr align="center">
+            <td rowspan="2">AÑO</td>
+            <td>Producto A</td>
+            <td>Producto B</td>
+            <td>Producto C</td>
+            <td>Producto D</td>
+        </tr>
+        <tr align="center">
+            <td colspan="4">Expansión de ventas</td>
         </tr>
     </table>
 </body>
