--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <li><a target="_blank" href="http://www.itb.cat">Opcion2</a></li>
                     <li><a target="_blank" href="http://formula1.com">Opcion3</a></li>
                     <li><a target="_blank" href="https://www.google.com/?safe=active&ssui=on">Opcion4</a></li>
-                    <li><a href="Ej04.html">Ej04</a></li>
-                    <li><a href="Ej05.html">Ej05</a></li>
+                    <li><a href="Exercises/Ej04.html">Ej04</a></li>
+                    <li><a href="Exercises/Ej05.html">Ej05</a></li>
                 </ul>
             </nav>
         </header>
