--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a target="_blank" href="https://www.google.com/?safe=active&ssui=on">Opcion4</a></li>
                     <li><a href="Exercises/Ej04.html">Ej04</a></li>
                     <li><a href="Exercises/Ej05.html">Ej05</a></li>
+                    <li><a href="Exercises/Ej06.html">Ej06</a></li>
                 </ul>
             </nav>
         </header>
