--- a/Exercises/Ej06.html
+++ b/Exercises/Ej06.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body>
-    <form action="">
+    <form action="" >
         <fieldset>
             <legend>Ficha de la película</legend>
             <label>Título</label>
@@ -26,7 +26,7 @@
             <br>
             <label>Clasificación:</label>
             <br>
-            <input type="radio" name="class">
+            <input type="radio" name="class" checked>
             <label>TP</label>
             <input type="radio" name="class">
             <label>+12</label>
